--- a/Main.ipynb
+++ b/Main.ipynb
@@ -929,14 +929,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "298/298 [==============================] - 4s 14ms/step\n",
+      "298/298 [==============================] - 3s 10ms/step\n",
       "1.7778568083807926\n",
       "0.735738217830658\n"
      ]
@@ -1008,12 +1008,49 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Test Accuracy: 0.751"
+    "# Test Accuracy: 73.5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Predicting on custom data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Emotions:\n",
+      "anger\n",
+      "anticipation\n",
+      "fear\n",
+      "pessimism\n"
+     ]
+    }
+   ],
+   "source": [
+    "#post=input(\"Enter your post here:\")\n",
+    "post=\"He was answering question about the criticism by the same individual that were referring to it as The Chinese and Wuhan Corona Virus last week But guess blind hatred negates the ability to look at things objectively Is he jackass Yes but this constant negativity from the moment he was nominated is exhausting \"\n",
+    "ans=model.predict(pad_sequences(tokenizer.texts_to_sequences([post]), padding='post', maxlen=maxlen))\n",
+    "ans[ans>0.30]=1\n",
+    "\n",
+    "print(\"Emotions:\")\n",
+    "#print(file_labels.values)\n",
+    "emotions_=[\"anger\",\"anticipation\",\"disgust\",\"fear\",\"joy\",\"love\",\"optimism\",\"pessimism\",\"sadness\",\"surprise\",\"trust\",\"neutral\"]\n",
+    "\n",
+    "for i,v in enumerate(ans[0]):\n",
+    "    if int(v) :\n",
+    "        print(emotions_[i])\n"
    ]
   }
  ],
